--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -34,14 +34,7 @@ futures-util = { version = "0.3", optional = true }
 diesel-async = { version = "0.5.0", optional = true, default-features = false }
 criterion-perf-events = { version = "0.4", optional = true }
 perfcnt = { version = "0.8", optional = true }
-wtx = { default-features = false, features = [
-  "atoi",
-  "memchr",
-  "postgres",
-  "simdutf8",
-  "std",
-  "tokio",
-], optional = true, version = "0.14" }
+wtx = { default-features = false, features = ["optimization", "postgres", "std", "tokio"], optional = true, version = "0.23" }
 
 [dependencies.diesel]
 path = "../diesel"
