Fix the reviewer team name
Co-authored-by: Ryan MacKenzie <rienmack@gmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,5 @@ updates:
     schedule:
       interval: "weekly"
     reviewers:
-      - "diesel/reviewer"
+      - "diesel/reviewers"
     versioning-strategy: "widen"
