--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ members = [
     "examples/postgres/custom_types",
     "examples/postgres/composite_types",
     "examples/postgres/relations",
+    "examples/postgres/notifications",
     "examples/sqlite/all_about_inserts",
     "examples/sqlite/getting_started_step_1",
     "examples/sqlite/getting_started_step_2",
