--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -49,10 +49,10 @@ downcast-rs = "1.2.1"
 version = "~2.2.0"
 path = "../diesel_derives"
 
-[target.'cfg(not(all(target_family = "wasm", not(target_os = "wasi"))))'.dependencies]
+[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
 libsqlite3-sys = { version = ">=0.17.2, <0.31.0", optional = true, features = ["bundled_bindings"] }
 
-[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dependencies]
+[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
 sqlite-wasm-rs = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
