--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -53,7 +53,7 @@ path = "../diesel_derives"
 libsqlite3-sys = { version = ">=0.17.2, <0.31.0", optional = true, features = ["bundled_bindings"] }
 
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
-sqlite-wasm-rs = { version = "0.1.1", optional = true }
+sqlite-wasm-rs = { version = ">=0.1.2", optional = true }
 
 [dev-dependencies]
 cfg-if = "1"
