--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = { version=">=0.9, <2.0" }
 ipnet = { version = "2.5.0" }
 ipnetwork = ">=0.12.2, <0.21.0"
 bigdecimal = ">= 0.0.13, < 0.5.0"
+libsqlite3-sys = { workspace = true, optional = true }
 rand = "0.8.4"
 pq-sys = { workspace = true, optional = true }
 pq-src = { version = "0.3", optional = true }
