--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,9 @@ members = [
     "examples/sqlite/getting_started_step_1",
     "examples/sqlite/getting_started_step_2",
     "examples/sqlite/getting_started_step_3",
-    "examples/sqlite/relations", "xtask",
+    "examples/sqlite/relations",
+    "examples/sqlite/wasm",
+    "xtask",
 ]
 
 [workspace.package]
