--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -14,19 +14,19 @@ criterion = { version = "0.5", default-features = false, features = [
   "csv_output",
   "cargo_bench_support",
 ] }
-sqlx = { version = "0.8.0", features = [
+sqlx = { version = "0.8.3", features = [
   "runtime-tokio-rustls",
 ], optional = true }
 tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
-rusqlite = { version = "0.31", optional = true }
+rusqlite = { version = "0.32", optional = true }
 rust_postgres = { version = "0.19.7", optional = true, package = "postgres" }
 tokio_postgres = { version = "0.7.10", optional = true, package = "tokio-postgres" }
-rust_mysql = { version = "23.0", optional = true, package = "mysql" }
+rust_mysql = { version = "25.0", optional = true, package = "mysql" }
 rustorm = { version = "0.20", optional = true }
 rustorm_dao = { version = "0.20", optional = true }
 quaint = { version = "0.2.0-alpha.13", optional = true, default-features = false }
 serde = { version = "1", optional = true, features = ["derive"] }
-sea-orm = { version = "=1.1.0-rc.1", optional = true, features = [
+sea-orm = { version = "1.1.0", optional = true, features = [
   "runtime-tokio-rustls",
 ] }
 futures = { version = "0.3", optional = true }
@@ -34,7 +34,7 @@ futures-util = { version = "0.3", optional = true }
 diesel-async = { version = "0.5.0", optional = true, default-features = false }
 criterion-perf-events = { version = "0.4", optional = true }
 perfcnt = { version = "0.8", optional = true }
-wtx = { default-features = false, features = ["optimization", "postgres", "std", "tokio"], optional = true, version = "0.23" }
+wtx = { default-features = false, features = ["optimization", "postgres", "std", "tokio"], optional = true, version = "0.26" }
 
 [dependencies.diesel]
 path = "../diesel"
@@ -70,4 +70,7 @@ codegen-units = 1
 [patch.crates-io]
 quaint = { git = "https://github.com/prisma/prisma-engines", branch = "main" }
 diesel-async = { git = "https://github.com/weiznich/diesel_async", branch = "main" }
+diesel = { path = "../diesel" }
+
+[patch.'https://github.com/diesel-rs/diesel']
 diesel = { path = "../diesel" }
