--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]
 edition = "2021"
 
 [workspace.dependencies]
-libsqlite3-sys = "0.30.1"
+libsqlite3-sys = ">=0.30.1,<0.32.0"
 pq-sys = ">=0.6,<0.8"
 openssl-sys = "0.9.100"
 mysqlclient-sys = "0.4"
