--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,20 +21,32 @@ concurrency:
 jobs:
   check_and_test:
     name: Check
-    needs:
-      [
-        sqlite_bundled,
-        sqlite_wasm,
-        rustfmt_and_clippy,
-        postgres_bundled,
-        mysql_bundled,
-      ]
+    needs: [rustfmt_and_clippy]
     strategy:
       fail-fast: false
       matrix:
-        rust: ["stable", "beta", "nightly"]
+        rust: ["stable"]
         backend: ["postgres", "sqlite", "mysql"]
-        os: [ubuntu-latest, macos-13, macos-15, windows-2025]
+        os: [ubuntu-latest, macos-13, macos-15, windows-2025, ubuntu-22.04-arm]
+        include:
+          - rust: "beta"
+            backend: "postgres"
+            os: "ubuntu-latest"
+          - rust: "beta"
+            backend: "sqlite"
+            os: "ubuntu-latest"
+          - rust: "beta"
+            backend: "mysql"
+            os: "ubuntu-latest"
+          - rust: "nightly"
+            backend: "postgres"
+            os: "ubuntu-latest"
+          - rust: "nightly"
+            backend: "sqlite"
+            os: "ubuntu-latest"
+          - rust: "nightly"
+            backend: "mysql"
+            os: "ubuntu-latest"
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout sources
@@ -239,6 +251,7 @@ jobs:
   compile_tests:
     name: Compiletests
     runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@master
@@ -290,6 +303,7 @@ jobs:
   sqlite_wasm:
     name: Check sqlite wasm
     runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -310,6 +324,7 @@ jobs:
   sqlite_bundled:
     name: Check sqlite bundled + Sqlite with asan
     runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -341,6 +356,7 @@ jobs:
   postgres_bundled:
     name: Check postgres bundled + Postgres with asan
     runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -383,6 +399,7 @@ jobs:
   mysql_bundled:
     name: Check mysql bundled + Mysql with asan
     runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -394,9 +411,10 @@ jobs:
           key: mysql_bundled-cargo-${{ hashFiles('**/Cargo.toml') }}
       - name: Install Mysql (Linux)
         run: |
-          sudo systemctl start mysql.service
           sudo apt-get update
           sudo apt-get -y install libmysqlclient-dev llvm
+          sudo systemctl start mysql.service
+          sleep 5
           mysql -e "create database diesel_test; create database diesel_unit_test; grant all on \`diesel_%\`.* to 'root'@'localhost';" -uroot -proot
           echo "MYSQL_DATABASE_URL=mysql://root:root@127.0.0.1/diesel_test" >> $GITHUB_ENV
           echo "MYSQL_EXAMPLE_DATABASE_URL=mysql://root:root@127.0.0.1/diesel_example" >> $GITHUB_ENV
@@ -435,6 +453,7 @@ jobs:
   minimal_rust_version:
     name: Check Minimal supported rust version (1.78.0)
     runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@1.78.0
