--- a/examples/sqlite/wasm/Cargo.toml
+++ b/examples/sqlite/wasm/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
 wasm-bindgen = "0.2.99"
 wasm-bindgen-futures = "0.4.49"
+sqlite-wasm-rs = "0.2"
 
 [lib]
 crate-type = ["cdylib"]
