--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -53,10 +53,10 @@ path = "../diesel_derives"
 libsqlite3-sys = { version = ">=0.17.2, <0.32.0", optional = true, features = ["bundled_bindings"] }
 
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
-sqlite-wasm-rs = { version = ">=0.2.2, <0.3.0", optional = true }
+sqlite-wasm-rs = { version = ">=0.2.4, <0.3.0", optional = true }
 
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
-# Something is dependent on it, so we use feature to override it.
+# Something is dependent on it, we use feature to override it.
 getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen-test = "0.3.49"
 
