--- a/deny.toml
+++ b/deny.toml
@@ -10,7 +10,7 @@ allow = [
     "Apache-2.0 WITH LLVM-exception",
     "Unicode-3.0",
     "BSD-3-Clause",
-    "GPL-2.0",
+    "GPL-2.0-only",
     "MPL-2.0",
     "Zlib",
 ]
@@ -30,4 +30,3 @@ skip-tree = [
 executables = "deny"
 #interpreted = "deny"
 #include-archives = true
-
