--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -36,3 +36,4 @@ libtirpc-dev = '*'
 x86_64-apple-darwin = "macos-15-intel"
 aarch64-apple-darwin = "macos-15"
 aarch64-unknown-linux-gnu = "ubuntu-22.04-arm"
+x86_64-pc-windows-msvc = "windows-2025"
