--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -366,6 +366,31 @@ jobs:
       - name: Test unit and integration tests
         run: cargo xtask run-tests --wasm sqlite
 
+  sqlite_load_extensions:
+    name: Check sqlite load extensions behavior
+    runs-on: ubuntu-latest
+    needs: [rustfmt_and_clippy]
+    steps:
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          persist-credentials: false
+      - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
+        with:
+          toolchain: stable
+      - name: Cache cargo registry
+        uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
+        with:
+          key: sqlite-load-extensions-cargo-${{ hashFiles('**/Cargo.toml') }}
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install libsqlite3-dev
+
+      - name: Run test script (Check extension disabling behavior)
+        shell: bash
+        run: bash .github/scripts/test_sqlite_no_extensions.sh
+
   sqlite_bundled:
     name: Check sqlite bundled + Sqlite with asan
     runs-on: ubuntu-latest
