--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -582,3 +582,40 @@ jobs:
       - name: Run cargo semver-checks
         run: |
           cargo xtask semver-checks
+
+  sqlite_restricted_build:
+    name: SQLite Restricted Build
+    runs-on: ${{ matrix.os }}
+    needs: [rustfmt_and_clippy]
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-2025]
+    steps:
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          persist-credentials: false
+
+      - name: Cache cargo registry
+        uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
+        with:
+          key: restricted-sqlite-${{ matrix.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
+
+      - name: Install rust toolchain
+        uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
+        with:
+          toolchain: stable
+
+      - name: Setup MSVC (Windows)
+        if: runner.os == 'Windows'
+        uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Run Restricted Build Test (Linux)
+        if: runner.os == 'Linux'
+        shell: bash
+        run: .github/scripts/test_sqlite_no_extensions.sh
+
+      - name: Run Restricted Build Test (Windows)
+        if: runner.os == 'Windows'
+        shell: powershell
+        run: .github/scripts/test_sqlite_no_extensions.ps1
